--- a/app/src/main/res/layout/activity_hanzi.xml
+++ b/app/src/main/res/layout/activity_hanzi.xml
@@ -76,6 +76,26 @@
                     android:layout_marginEnd="8dp"
                     android:text="@string/animate" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/hanziHard"
+                    android:layout_width="128sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/hard" />
+                <Button
+                    android:id="@+id/hanziEasy"
+                    android:layout_width="128sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/easy" />
+            </LinearLayout>
         </LinearLayout>
 
         <Button
